[tool.poetry]
name = "mia"
version = "0.1.0"
description = "Medical Insight and Analysis"
authors = ["Andre Luiz Monteiro da Rocha <andrecorumba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
requests = "^2.31.0"
httpx = "^0.27.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
